<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Hakuna Matata</string>
    <string name="inputNombre">Nombre</string>
    <string name="inputContraseña">Contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="perfil">PERFIL</string>
    <string name="citas">Añade tus citas:</string>
    <string name="dni">DNI</string>
    <string name="correo2">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="mascota">Mascota</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar">Guardar</string>
    <string name="configuracion">Configuración</string>
    <string name="cambiarContraseña">Cambiar Contraseña</string>
    <string name="idiomas">Idiomas</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modoOscuro">Modo Oscuro/Claro</string>
    <string name="guardar_perfil">GUARDAR PERFIL</string>
    <string name="mascota_toast1">Mascota 1</string>
    <string name="mascota_toast2">Mascota 2</string>


    <!-- Strings de la pantalla contactos -->
    <string name="correo">CORREO: hakuna.matata@gmail.com</string>
    <string name="contactos">CONTACTOS</string>
    <string name="numTelf">TELÉFONO: 123456789</string>
    <string name="veterinario">VETERINARIO: HAKUNA MATATA</string>
    <string name="mapa">MAPA</string>

    <!-- Strings de la pantalla consultas -->
    <string name="consultas">CONSULTAS</string>
    <string name="NOMBRE">NOMBRE</string>
    <string name="descripcion">DESCRIPCION</string>
    <string name="correo1">CORREO</string>
    <string name="TELEFONO">TELEFONO</string>
    <string name="enviarConsulta">ENVIAR CONSULTA</string>

    <!-- Strings de la pantalla citas -->
    <string name="CITAS">CITAS</string>
    <string name="eliminar">Eliminar</string>
    <string name="editar">Editar</string>
    <string name="añadir">Añadir cita</string>
    <string name="infoFotoMascota">Foto de @Mascota</string>
    <string name="nombreMascota">Mascota</string>
    <string name="fechaCita">Fecha de la cita</string>

    <!-- Strings de la pantalla calendario -->
    <string name="calendario">Calendario</string>

    <!-- Strings de la pantalla mascotas -->
    <string name="tipoMascota">Perro</string>
    <string name="fechaCalendario">Selecciona tu fecha</string>


    <!-- Idiomas de la app.-->
    <string-array name="idiomas">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>

    <string-array name="valores_idiomas">
        <item>es</item>
        <item>en</item>
    </string-array>

    <!-- Configuración de la app-->

    <string name="Idioma" >Preferencias de Idioma</string>
    <string name="cambiarIdioma" >Cambiar Idioma</string>
    <string name="descripcionIdioma">Selecciona el idioma de la aplicación</string>

    <string name="Notificaciones" >Preferencias de Notificaciones</string>
    <string name="cambiarNotificacion" >Activar notificaciones</string>
    <string name="descripcionNotificacion">Recibe alertas y actualizaciones importantes.</string>

    <string name="Oscuro" >Preferencias de Tema</string>
    <string name="cambiarOscuro" >Modo oscuro</string>
    <string name="descripcionOscuro">Activa o desactiva el modo oscuro.</string>

    <!-- MENÚ LATERAL -->
    <string name="open_drawer">Abrir menú</string>
    <string name="close_drawer">Cerrar menú</string>
    <string name="header_image_desc">profile image</string>
    <string name="username">Username</string>
    <string name="menu_perfil">PERFIL</string>
    <string name="menu_citas">CITAS</string>
    <string name="menu_mascotas">MASCOTAS</string>
    <string name="menu_consultas">CONSULTAS</string>
    <string name="menu_calendario">CALENDARIO</string>
    <string name="menu_contacto">CONTACTO</string>
    <string name="menu_conf">CONFIGURACIÓN</string>

    <!-- Pantalla detalles mascotas -->

    <string name="nombre_mascota">Nombre</string>
    <string name="raza_mascota">Raza</string>
    <string name="edad_mascota">Edad</string>
    <string name="color_mascota">Color</string>
    <string name="tipo_mascota">Tipo</string>
    <string name="chip_mascota">MicroChip</string>

    <string name="btn_guardar">GUARDAR</string>


</resources>