<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="412dp"
        android:layout_height="71dp"
        android:background="@color/azul_claro"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/contactosTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consultas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <EditText
        android:id="@+id/inputDNI"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:hint="@string/dni"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearlayout" />

    <EditText
        android:id="@+id/inputNombre"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:hint="@string/NOMBRE"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDNI" />

    <EditText
        android:id="@+id/inputDescripcion"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:hint="@string/descripcion"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputNombre" />

    <EditText
        android:id="@+id/inputCorreo"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:hint="@string/correo1"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputDescripcion" />

    <EditText
        android:id="@+id/inputTelefono"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:hint="@string/TELEFONO"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputCorreo" />

    <Button
        android:id="@+id/enviarBoton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviarConsulta"
        android:backgroundTint="@color/amarillo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTelefono" />

</androidx.constraintlayout.widget.ConstraintLayout>