<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="com.example.hakunamatata.cita.CitaData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/borde_mascotas"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/infoFotoMascota"
            android:src="@drawable/foto_mascota" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:text="@string/nombreMascota"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textFechaCita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:text="@string/fechaCita"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Botón eliminar -->
        <ImageView
            android:id="@+id/imgEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/foto_basura" />

    </LinearLayout>
</layout>
