<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="item"
            type="com.example.hakunamatata.mascota.MascotaData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imagen"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_margin="10dp"
            android:contentDescription="@string/infoFotoMascota"
            android:src="@drawable/foto_mascota" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textNombreMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:text="@string/nombreMascota"
                android:textSize="22sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/textTipoMascota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingEnd="8dp"
                android:text="@string/tipoMascota"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Botón eliminar -->
        <ImageView
            android:id="@+id/imagenEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eliminar"
            android:src="@drawable/foto_basura" />

    </LinearLayout>
</layout>